--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@ body{
 /* text shadow  */
 
 .textShadow{
-    text-shadow: 1px 4px var(--dark-blue);
+    text-shadow: 1px 4px #14ff00;
 }
 
 .textShadow-sm{
