--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,9 @@ body{
 .textShadow-md{
     text-shadow: 1px 3px var(--dark-blue);
 }
+
+@media all and (max-width: 1000px){
+    .textShadow{
+        text-shadow: 1px 2px #14ff00;
+    }
+}
